---------------------------------------------------------------------------------------------------
Version: 0.9.3
Date: 12. 03. 2022
  Bugfixes:
    - Update Russian translation.
---------------------------------------------------------------------------------------------------
Version: 0.9.2
Date: 28. 02. 2022
  Features:
    - Add Russian translation by Eldrinn-Elantey.
---------------------------------------------------------------------------------------------------
Version: 0.9.1
Date: 24. 12. 2020
  Features:
    - Add base game's armor animations to the modded armors as well, thanks to a contribution by millerlarson.
---------------------------------------------------------------------------------------------------
Version: 0.9.0
Date: 29. 11. 2020
  Changes:
    - Update to Factorio 1.1.
---------------------------------------------------------------------------------------------------
Version: 0.8.1
Date: 23. 04. 2020n
  Changes:
    - Re-modify graphics from base game, resulting in the same shadows as the base game, as well as updated visual effects.
  Bugfixes:
    - Fixed minor issue with the robot shadow. Thanks millerlarson for reporting!
---------------------------------------------------------------------------------------------------n
Version: 0.8.0
Date: 19. 01. 2020
  Changes:
    - Update to Factorio 0.18.
---------------------------------------------------------------------------------------------------
Version: 0.7.0
Date: 19. 01. 2020
  Features:
    - Add compatibility with Industrial Revolution (different recipes).
---------------------------------------------------------------------------------------------------
Version: 0.6.0
Date: 01. 07. 2019
  Changes:
    - Early construction robots can now be deployed via non-personal roboports.
    - Reimplemented the destruction logic to maximize mod compatibility, and simplified the code a lot.