@@ -1,7 +1,10 @@
 [mod-setting-name]
 early-construction-enable-entity-ghosts-when-destroyed=Destroyed entities should leave ghosts
+early-construction-robot-by-craft=Robot by Craft
+
 [mod-setting-description]
 early-construction-enable-entity-ghosts-when-destroyed=When enabled, destroyed entities will leave behind ghost placed versions of themselves after you unlock the early game light armor.
+early-construction-robot-by-craft=Specify the number of Robot created for one recipe craft.
 
 [entity-name]
 early-construction-robot=Early construction robot
